# ai_workshop_cv_case

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  PIPELINE_OPTIMIZATION.md  README.md  README_PARALLEL.md  docker-compose.annotation.yml  opencode.json  pyproject.toml  requirements.txt  setup.sh
annotation/: README.md  label_studio_config.xml  sample_predictions.json  sample_tasks.json  tasks_smoke.json
configs/: bytetrack_triage.yaml  candidates.yaml  evaluation_acceptance.yaml  proposals.yaml  storage.s3.yaml  storage.yaml  track_a.yaml  track_b1.yaml  triage.yaml
docs/: ANNOTATION_WORKFLOW.md  CONCEPTS.md  CURRENT_STATE.md  FEATURE_EXTRACTION.md  GPU_OPTIMIZATION.md  IMPLEMENTATION_PLAN.md  LABELING_GUIDELINES.md  LABEL_STUIDO.md  LITERATURE.md  LOCAL.md  MANIFEST_SCHEMA.md  NEXT_STEPS.md  NEXT_STEPS_TrackA.md  PROCESS_ALL_REPORT.md  README_task8.md  STATUS.md  VLM_ANNOTATE.md  VLM_POST_ANNOTATION_STEPS.md  task_8_COMPLETION.md
scripts/: create_parallel_pilot.sh  download_all_s3.sh  download_s3_sample.py  fix_candidate_s3_content_type.sh  process_all_local.sh
task8_pkg/: pyproject.toml  tools_selfcheck.py
tests/: conftest.py  test_active_spans.py  test_annotation_export.py  test_candidate_annotation.py  test_candidate_annotation_fixes.py  test_cli.py  test_cli_infer.py  test_config.py  test_enum_types.py  test_evaluation.py  test_exceptions.py  test_finalize_task7.py  test_hand_state.py  test_inference.py  test_integration_pydantic.py  test_integration_real_schemas.py  test_local_download.py  test_metadata_loader_compat.py  test_person_tracker.py  (+21 more)
(+115 files in other folders)
