[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pickup-putdown"
version = "0.1.0"
description = "Pickup and putdown temporal action detection in store video"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "boto3>=1.34",
    "pyarrow>=15.0",
    "ultralytics==8.3.50",
    "opencv-python-headless>=4.8",
    "lap>=0.5.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "types-pyyaml>=6.0",
]
viz = [
    "Pillow>=9.0",
]

[project.scripts]
pickup-putdown = "pickup_putdown.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "TID"]
ignore = ["E501", "SIM105"]

[tool.ruff.lint.isort]
known-first-party = ["pickup_putdown"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "annotation_acceptance: Task 6 annotation workflow acceptance tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]
